--- a/frontend/index.html
+++ b/frontend/index.html
@@ -104,8 +104,8 @@
             formData.amount =
               document.getElementById("event").value === "both" ||
               document.getElementById("college").value !== "jgec"
-                ? 800
-                : 500;
+                ? 1
+                : 1;
 
             formData.collegeName =
               document.getElementById("college").value === "jgec"
@@ -129,7 +129,7 @@
         }
 
         const options = {
-          key: "rzp_test_mEtMCuqx6MkbMi",
+          key: "rzp_live_kw4g3yg2seD3kD",
           amount: paymentData.amount,
           currency: "INR",
           name: "Sristi 2025",
