--- a/frontend/index.html
+++ b/frontend/index.html
@@ -136,8 +136,9 @@
           description: "Event Registration Fee",
           order_id: paymentData.orderId,
           handler: async function (response) {
+            console.log(response);
             formData.paymentId = response.razorpay_payment_id;
-            formData.orderId = response.razorpay_order_id;
+            formData.orderId = paymentData.orderId;
             formData.signature = response.razorpay_signature;
 
             const verifyResponse = await fetch("http://localhost:4000/payment/verify-payment", {
