--- a/frontend/index.html
+++ b/frontend/index.html
@@ -134,11 +134,11 @@
           currency: "INR",
           name: "Sristi 2025",
           description: "Event Registration Fee",
-          order_id: paymentData.orderId,
+          order_id: paymentData.id,
           handler: async function (response) {
             console.log(response);
             formData.paymentId = response.razorpay_payment_id;
-            formData.orderId = paymentData.orderId;
+            formData.orderId = response.razorpay_order_id
             formData.signature = response.razorpay_signature;
 
             const verifyResponse = await fetch("http://localhost:4000/payment/verify-payment", {
