--- a/frontend/index.html
+++ b/frontend/index.html
@@ -137,14 +137,17 @@
           order_id: paymentData.id,
           handler: async function (response) {
             console.log(response);
-            formData.paymentId = response.razorpay_payment_id;
-            formData.orderId = response.razorpay_order_id
-            formData.signature = response.razorpay_signature;
+
+            const verifyInfo = {
+      razorpay_order_id: response.razorpay_order_id,
+      razorpay_payment_id: response.razorpay_payment_id,
+      razorpay_signature: response.razorpay_signature
+    };
 
             const verifyResponse = await fetch("http://localhost:4000/payment/verify-payment", {
               method: "POST",
               headers: { "Content-Type": "application/json" },
-              body: JSON.stringify(formData),
+              body: JSON.stringify(verifyInfo),
             });
 
             const verifyData = await verifyResponse.json();
